<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="courseracapstone.org.mutibo.GameOverActivity"
    android:onClick="endGame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textGameOver"
        android:id="@+id/textViewGameOver"
        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textFinalPoints"
        android:id="@+id/textViewGameOverPoints"
        android:layout_below="@+id/textViewGameOver"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEndGame"
        android:id="@+id/buttonEndGame"
        android:layout_marginTop="104dp"
        android:layout_below="@+id/textViewGameOverPoints"
        android:layout_alignRight="@+id/textViewGameOver"
        android:layout_alignEnd="@+id/textViewGameOver"
        android:onClick="endGame" />
</RelativeLayout>
