<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="courseracapstone.org.mutibo.newSet1Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textNewSet1"
        android:id="@+id/textViewNewSet1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textMovie1"
        android:id="@+id/textViewMovie1"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textViewNewSet1"
        android:layout_alignRight="@+id/textViewNewSet1"
        android:layout_alignEnd="@+id/textViewNewSet1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMovie1"
        android:hint="@string/textMovie1"
        android:layout_below="@+id/textViewMovie1"
        android:nextFocusForward="@+id/editTextMovie2"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textMovie2"
        android:id="@+id/textViewMovie2"
        android:layout_below="@+id/editTextMovie1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMovie2"
        android:hint="@string/textMovie2"
        android:layout_below="@+id/textViewMovie2"
        android:nextFocusForward="@+id/editTextMovie3"
        android:layout_alignParentRight="true"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textMovie3"
        android:id="@+id/textViewMovie3"
        android:layout_below="@+id/editTextMovie2"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMovie3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:nextFocusForward="@+id/editTextMovie4"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/textMovie3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textMovie4"
        android:id="@+id/textViewMovie4"
        android:layout_alignLeft="@+id/textViewMovie3"
        android:layout_alignStart="@+id/textViewMovie3"
        android:layout_below="@+id/editTextMovie3" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMovie4"
        android:layout_below="@+id/textViewMovie4"
        android:layout_centerHorizontal="true"
        android:nextFocusForward="@+id/buttonNext"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/textMovie4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNext"
        android:id="@+id/buttonNext"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editTextMovie4"
        android:layout_alignEnd="@+id/editTextMovie4"
        android:layout_marginBottom="58dp"
        android:onClick="createNewSet2" />

</RelativeLayout>
