<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="courseracapstone.org.mutibo.newSet2Activity"
    android:onClick="createSet">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textNewSet2"
        android:id="@+id/textViewNewSet2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moviesRadioGroup"
        android:layout_below="@+id/textViewNewSet2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMovie1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMovie2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMovie3"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMovie4"/>

    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textAnswerSet"
        android:id="@+id/textViewAnswer"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextAnswer"
        android:layout_below="@+id/textViewAnswer"
        android:layout_toEndOf="@+id/moviesRadioGroup"
        android:nextFocusForward="@+id/buttonAddSet"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_marginTop="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAddSet"
        android:id="@+id/buttonAddSet"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editTextAnswer"
        android:layout_alignEnd="@+id/editTextAnswer"
        android:layout_marginRight="36dp"
        android:onClick="createSet" />


</RelativeLayout>
